# axum_seaORM_postgres

./: Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: cake.rs  cake_filling.rs  filling.rs  fruit.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20241112_074049_fruit.rs  m20241112_074142_cake.rs  m20241112_074225_filling.rs  m20241112_074314_cake_filling.rs
src/: lib.rs  main.rs
src/router/: cake.rs  cake_filling.rs  filling.rs  fruit.rs  hello_world.rs  mod.rs
